# munix

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
docs/: app-architecture-mermaid.md  app-runtime-architecture.md  client-frontend-architecture.md  decisions.md  implementation-plan.md  install.md  issues-log.md  manual-test-checklist.md  munix-design-bridge.md  munix-design-v0.3.md  refactor-architecture-plan.md  release.md  test-automation-strategy.md
docs/specs/: README.md  auto-save-spec.md  cli-spec.md  editor-spec.md  file-tree-spec.md  frontmatter-properties-spec.md  i18n-spec.md  keymap-spec.md  mermaid-spec.md  multi-vault-spec.md  plugin-spec.md  search-spec.md  settings-spec.md  tab-runtime-cache-spec.md  terminal-spec.md  theme-spec.md  ui-ux-spec.md  vault-spec.md  vault-trust-spec.md  (+1 more)
munix/: .gitignore  .prettierignore  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  test-harness.html  tsconfig.json  vite.config.ts
munix/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
munix/src-tauri/capabilities/: default.json
munix/src-tauri/icons/: icon.icns
munix/src-tauri/native/macos/: MunixTerminalBridge.swift
munix/src-tauri/src/: cli.rs  cli_ipc.rs  clipboard.rs  error.rs  lib.rs  main.rs  markdown.rs  settings.rs  state.rs  terminal_swift_bridge.rs  thumbnail.rs  trust.rs  vault.rs  vault_manager.rs  vault_registry.rs  watcher.rs
munix/src-tauri/src/commands/: fs.rs  mod.rs  terminal.rs  terminal_completion.rs  terminal_native.rs  vault.rs
scripts/: install-macos.sh
(+316 files in other folders)
