[package]
name = "munix"
version = "0.1.13"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "MIT"
default-run = "munix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "munix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-shell = "2.3.5"
thiserror = "2.0.18"
walkdir = "2.5.0"
gray_matter = "0.3.2"
sha2 = "0.11.0"
sha1 = "0.10"
image = "0.25.10"
trash = "5.2.5"
tokio = { version = "=1.47.0", features = ["full"] }
notify = "7"
notify-debouncer-full = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-log = "2.8.0"
log = "0.4.29"
portable-pty = "0.9.0"
